Fix List access in module aggregate service test